# normalizer.js

./: .gitignore  Makefile  README.md  package-lock.json  package.json
src/routes/: +page.svelte
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/src/core/: application.rs  mod.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/routes/: +page.svelte
