[package]
name = "normalizer"
version = "0.1.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2024"
description = "Web IDE for Norm programming language."
repository = "https://github.com/krre/normalizer.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.53"
antiq = "0.1.0"
